--- a/basicDev/rails_hello/app/views/index/index.html.erb
+++ b/basicDev/rails_hello/app/views/index/index.html.erb
@@ -4,9 +4,8 @@
 I plan on learning new technologies that I don't have prior experience with. <br>I plan on learning some best practices that I can extend to my co-ops/future projects/life.<br>I am a 3rd year and I hope to learn as much as I can through the various assignments and the projects.
 
 </p>
- Assignment <a href="http://www.se.rit.edu/~swen-344/homeworks/webtechnologies.html"> here</a> 
-
- Another page on the app: <a href="/new/new">newPageHere</a> 
+ M* assignment <a href="http://www.se.rit.edu/~swen-344/homeworks/MPatterns.html"> here</a> 
+<br>
 
 <div class="container-fluid">
 <%= image_tag "betty pearls.jpg" %>
