--- a/basicDev/rails_hello/app/views/index/index.html.erb
+++ b/basicDev/rails_hello/app/views/index/index.html.erb
@@ -1,12 +1,11 @@
-<h1>Index#index</h1>
-<p>Find me in app/views/index/index.html.erb<br>
+<h1>Node index</h1>
 
 I plan on learning new technologies that I don't have prior experience with. <br>I plan on learning some best practices that I can extend to my co-ops/future projects/life.<br>I am a 3rd year and I hope to learn as much as I can through the various assignments and the projects.
 
 </p>
  Assignment <a href="http://www.se.rit.edu/~swen-344/homeworks/webtechnologies.html"> here</a> 
 
- Another page on the app: <a href="/new/new">newPageHere</a> 
+ Another page on the app: <a href="/node2">node2</a> 
 
 <div class="container-fluid">
 <%= image_tag "betty pearls.jpg" %>
