--- a/basicDev/rails_hello/app/views/new/new.html.erb
+++ b/basicDev/rails_hello/app/views/new/new.html.erb
@@ -1,4 +1,3 @@
-<h1>New#new</h1>
-<p>Find me in app/views/new/new.html.erb</p>
-<a href="/">home_1</a> 
-<a href="/index/index">home_2</a> 
+
+<p>node page 2</p>
+<a href="/">index here</a> 
